--- a/HuergoMotorsVentas/frmMDI.resx
+++ b/HuergoMotorsVentas/frmMDI.resx
@@ -130,28 +130,70 @@
   <data name="btVehiculos.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAQzSURBVFhH7ZNtUJRVFMcXTB0iQWSX9+VNxw81vUwy1Jc+
-        aE019qHyYw3oGmumEo3ZlLtoU0ihrECAhJjTKEHCyquuECCvIpi4OArsKsOwu8DwEuAKSqvA/DvnrjKK
-        mls5fdr/zG/ufc4953/ufZ77SJxyyimnHJDLZ3k+4epy2UGVzutifKUHVBXuSKgJQGLtc1BXuEGl8xjY
-        Web9OeW62kuejFxVJb4bdld62RJq/KAz7EbnSAumZy2YL9PEAE5djcOeWnd8VSLbwbV2i3+p9V97Lo3X
-        SS/vq1uJCwPHRBPrNNAxAZzpW4uCPiC3dwaFlmkUWGZw4Zp9fWr2BooNa6E66VVCNk/Z3f6ZXGKzZcvj
-        Kz1xwhCHmzPT6J0Cii2zSDbcRooR+PmiBGlXgDSjjbgpSDFO0boN1UO8CaDB8jG+1S1LJr8FdlvH5LIl
-        U7ZCTd9YP/CTOHUfnfjSCOjVA8ZR4OoYkNMmQfc4cIWe78JrBqKD8nqsohR5Hc+DPN3t1o5psapmGdr6
-        D2OCTnH6D6B6mEYyrSPzRmreTK8663eJGJvoeT6cw7mXJynXsgvf1HggvlIKtU5WqyqTbaAej7wbC9s9
-        JYMl5p24DSvMk8dgmfgF/USvNQeV3e8itdkVGa3P4MA5KY1LkN6ySJDR6obM1qcF6S2LRU5F9zoMT1UT
-        FRj5sxr9N0pRZtyIuGIXvWn0Vin1u+9+LNBHeu83PeuGIXSh45oGv5lW46RpFXRElfkNdI1poB9KoE34
-        UpMg/HDWn159MYo619FzIDWVi3hqs4/I4/wq85tUH4lTpldQY3kbhnENmvt2oOd6D/Rjtwap70J7e/pO
-        42tW2voT3sHp0RikkvnmI95QHJIKPjkipYZBqO+LRlHXe9jfJEfKmWAag2iUU9MQpDWHIqUpWKxzHudz
-        3f0eAag2vw+LrR2DdEdKRyfLqbd4E96X1C+gfDgKGircmB2ImNgP8FFUrEDMs+l01LiqNxp764OR3BgK
-        zRxhYuQ4r3Me58/3YF9Nky/arFnAa6GwBEj4ki7hDfjsaghGnjECW3P9RXJSYgq0BUUCnnNs61F//NoZ
-        ge9qQ5BUF/YAHOd1znuUx5ajvsg1vAh1YyDizwbzBqS8AdmXx+XtWeeXQ3mYiqM+FUX5efkCnsfQKZQH
-        ViBHH47EulB8Xx/2ABz/se3xHgfbw7GHcr8olDdwb96AB/Fy+rkQbC/0Q0z0NmgLjyM/n4oJnses34bt
-        Wj9kng/BpuwwbM4hDt0DPXOc1znv7zwyKEeRHnSder5EiE/AF8GfiCTeivpQ2bM3aR+0Wq2A5xzjNeJ1
-        B3icxxoigvAl5n7HRYQXEUK8qlAozEqlEgzPOXZnzccBHPFYSsz9hveKg37EKmL1HXjOsYcWPET/2YOT
-        PAm+IAzPHW1+V0/CwymnnPo/JJH8BSeyi5rssZElAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAQzSURBVFhH7ZNtUJRVFMcXTB0iQWSX5f1Nxw81vUwy1Jdm
+        sppq7EPlxxpQjC1TicZsyl20KaRQViBAQsxplCBh5TVXCJBXEUxcHAV2lWHYfRaGl0BXUEKB+XfOXWUU
+        Nbdy+rT/md/c+5x7zv/c+zz3kTnllFNOOSCXT/N9wjUViv1qvde5hCoPqCvdkVjrj6S6p6CpdINa7zGw
+        vdz7M8p1tZc8GrmqS5Xrd1Z5TSXW+kJv3ImukVZMz0qYL/P4AI5fiseuOnd8WarYxrV2i3+pdV95Lk3Q
+        yy/sqV+JswNHRBPbNNA5Dpy0rkGhFcjrm0GRNI1CaQZnr9jXJ2evocS4BupjXqVk85jd7Z/JJS5HsTyh
+        yhO/GuNxfWYafZNAiTSLFONNpJqAn87JkH4RSDdNEdcFqaZJWp9CzRBvAmiUPsI3+mUp5LfAbuuYXDZl
+        KVZo6BsbBn4Up7bSic+PgF49YBoFLo0Bue0y9FwGLtLzbXjNSHRSXq9NlCK/82mQp7vd2jEtVtcuQ3v/
+        QYzTKU78AdQM00im9WTeRM1b6FVn/y4TYzM9z4dzOPfCBOVKO/B1rQcSquTQ6BV16nLFeurxwLuxsMNT
+        Nlhq2Y6bsMEycQTS+M/oJ/psuajqeRtpLa7IbHsC+07LaVyCjNZFgsw2N2S1PS7IaF0scip71mJ4soao
+        xMifNei/VoZy0wbEl7gYzKM3yqjfXfdjgSHSe6/5STcMoRudV7T4zbwax8yroCeqLa+he0wLw1AibUJJ
+        TQLx/Sk/evUlKO5aS88B1DRIxNNafEQe51dbXqf6SBw3v4Ba6U0YL2vRYt2G3qu9MIzdGKS+C+3t6TuN
+        vrxyqj/xLZwYjUUamW885I2YA3LBx4fk1DAQDdZoFHe/g73NQUg9GUxjII1B1DQE6S2hSG0OFuucx/lc
+        d7eHP2os70Ka6sAg3ZGy0YkK6i3ehPd5zTOoGI6Clgo35AQgNu49fBAVJxDzHDodNa7ui8buhmCkNIVC
+        O0eYGDnO65zH+fM92FfbrES7LRt4KRSSv4wv6RLegM+OxmDkmyKwOc9PJCcnpUJXWCzgOcc2H/bDL10R
+        +LYuBMn1YffAcV7nvAd5bDqsRJ7xWWiaApBwKpg3IOcNKL44GtSRfWY5VAepOOoTUVSQXyDgeSydQrVv
+        BXIN4UiqD8V3DWH3wPEf2h/usb8jHLso9/OioEbuzRvwIJ7POB2CrUW+iI3eAl3RURQUUDHB89h1W7BV
+        54usMyH4MCcMG3OJA3dAzxzndc77O49MyonJCLhKPZ8jxCfgi+BHRBJvRL2v6t2dvAc6nU7Ac47xGvGq
+        AzzM4xUiglASc7/jIsKLCCFejImJsahUKjA859itNR8HcMRjKTH3G94pDvoSq4jVt+A5x+5bcB/9Zw9O
+        8iT4gjA8d7T5bT0KD6eccur/kEz2FwHzi5Xwm3ZPAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>52</value>
   </metadata>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEACACoCAAAFgAAACgAAAAgAAAAQAAAAAEACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAtKJbALCgXACetX8AobZ/AMKkUgDGqFcAxKdYAMaqXADIrF8Ayq9jAMyxZgDlvn8A+LR1APi4
+        ewAAAKAAAACsAAYGrgAGGKkAFhatAAAAtgAGBrcAAQS8ABYWswAWFrYAFha6AA0gpwAIIKgAESmnADAw
+        tAAwMLgAAEKCAABGhgAASIYAAEqIAABMiwAATowAAFGPAABSkAAAVpEAAFaVAABakgAAXZYAAGGZAABr
+        ngAQYJsAFGKcAB5bvgAlXb8ALF+/AABtoAAPaqMAD2qkABBtpQAAcKMAAHKlAAB0pwAAdqkAAHmsAAB8
+        rwAAfrEALWC/ADxotQAxYb8AN2O/ADljvwA6dL8AUFC6AENqtQBBd78AAgfBAAAAxAACBsYAAwjHAAQI
+        xwAAANEAAADbAAAA3QAAAOMAAADpAAAA7wAAAPAAAAD3AAAA+AAAAP4AIW7CAClwwgAxc8IANXTCADl1
+        wgA9d8IAQnjCAER5wgAAgbQAAIS3AACGuQAAiLsAAIm8AACMvwBLgr0ATYK9AFCDvQBShL0AVYS9AFiF
+        vQB+lLwAcbOzAHWzswAAjcEAAJDDAACSxQAAlskADI/QAAee2wAJntsAI5XQABqj2wAco9sAHqTbACGl
+        2wA0tuAAO7jgAFW+3gBYv94AZL3OAG2+zQBDuuAASbzgAFG/4AABzP8ABs3/AAnO/wANz/8AEdD/ABXR
+        /wAa0v8AHNP/AB3U/wAh1P8AJdX/ACrW/wAt2P8AP9b5ADHZ/wA12f8AOdv/ADrc/wA93P8AXcHeAGPC
+        3gBmxN4AcMfeAHPI3gBYweAARtT1AEHd/wBF3v8ASd//AFnZ9QBT3PkAbsjgAHTK4ABm2fIAa9rxAGze
+        9QBz3PEAfN/xAErg/wBN4P8AUOH/AFXi/wBY4/8AWeT/AF3k/wB04OkAeuLpAGbj9wBm4fkAYeb/AGXm
+        /wBp6P8Aben+AHPg9QB84/UAd+j3AHHq/wB26/8Aeez/AH3t/wD4vYQAjcKjAJbFowCdzLUAns+5AKrZ
+        vwDlwYQA5sSJAObGjQD4wYsA/8ecAP/MpAD/0q8A/9SyAP/XtwD/2bsAo6PaAIvc3wCB3eMAguPpAIXl
+        6QCL5ukAk+npAI3k8QCB7v8Aken1AIfw/wD/3sQA/+PNAP/o1wD/7eAA95H/APmx/wD70f8A////AAAA
+        AAAbAC8ALQBQAD8AcABSAJAAYwCwAHYAzwCIAPAAmRH/AKYx/wC0Uf8AwnH/AM+R/wDcsf8A69H/AP//
+        /wAAAAAACAAvAA4AUAAVAHAAGwCQACEAsAAmAM8ALADwAD4R/wBYMf8AcVH/AIxx/wCmkf8Av7H/ANrR
+        /wD///8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABpc3d2dnV0ICsqKikp
+        Jx9ycnFxcXBpAAAAAAAAAAAAAGaPjY2Mi4skOjk3NjIsIYSDgoKBgWMAAAAAAAAAAAAAZpGQj4+NjCQ7
+        Ojk4NjIihoWEhIOCYwAAAAAAAAAAAABnm5OTkZCQJV08Ozo5NyKIh4aGhYRkAAAAAAAAAAAAAGednJub
+        k5EmXl08Ozo5I4qKiYiGhmQAAAAAAAAAAAAAZ6mop52cnCZhX15dPDskjIyLi4qJZQAAAAAAAAAAAABo
+        q6qpqaidJ2xhYF5dPCSPjY2Mi4tlAAAAAAAAAAAAAGitrayrqqkobm1iYV9eJZKRkI+PjWUAAAAAAAAA
+        AAAAaLOzsq2srChvbm1sYV8mm5OSkZCQZgAAAAAAAAAAAABEtbW0s7OyKG5tbGFgXyWnnZybm5M+AAAA
+        AAAAAEMVEByiubm1tLQuNTU1NDQzLamop52cjhsPEUMAAADNR1RLGnqju7q5ubW0tLOysq2trKqqqZp4
+        EkdMFM0AAAAXT1JIWHu2vLu7uL8EBAMDvrCtrayfeVUWTUsTAAAAAAAdUVRJPZSl1dXRBsa9Dg0FrrSz
+        nn4vRk9NHQAAAAAAAAAZUVJJWZS319IJy8nIxwevubF/VkZPThgAAAAAAAAAAAAeUVRKP5Wm0wrZ2MzK
+        CNCkgDBIU08eAAAAAAAAAAAAAAAZUVJKWpbOC9va2dgJz5lXSVJQGQAAAAAAAAAAAAAAAAAeUVRKP30C
+        xcTDDAF8MUlUUR4AAAAAAAAAAAAAAAAAAAAZUVJKRWvAwsLBakJJUlEZAAAAAAAAAAAAAAAAAAAAAAAe
+        UVRKQJfU1qA/SlRRHgAAAAAAAAAAAAAAAAAAAAAAAAAZUVJKXJihW0pSURkAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAeUVRKQUFKVFEeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAZUVJKSlJRGQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAeUVRUUR4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAZUVEZAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAeHgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP////////////////gAAB/4AAAf+AAAH/gAAB/4AAAf+AAAH/gAAB/4AAAf+AAAH/gA
+        AB/AAAADgAAAAcAAAAPgAAAH8AAAD/gAAB/8AAA//gAAf/8AAP//gAH//8AD///gB///8A////gf///8
+        P////n//////////////////
+</value>
+  </data>
 </root>
