--- a/HuergoMotorsVentas/Properties/Resources.resx
+++ b/HuergoMotorsVentas/Properties/Resources.resx
@@ -118,22 +118,28 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="lineas-rojas-png-5" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\lineas-rojas-png-5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="rombos rojos" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="rombos rojos1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\rombos rojos.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="CapturaHuergoMotors" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\CapturaHuergoMotors.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="rombo rojo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\rombo rojo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="rombos rojos1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="CapturaHuergoMotors" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\CapturaHuergoMotors.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="rombos rojos" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\rombos rojos.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lineas-rojas-png-5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\lineas-rojas-png-5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="fondo rojo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\fondo rojo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lupa" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\lupa.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="reload" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\reload.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
